<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pearl"
    android:id="@+id/main_menu">

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2"
        android:rowCount="4"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_column="0"
            android:layout_row="0">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_decks"
                android:padding="@dimen/activity_horizontal_margin"
                android:background="?attr/colorPrimaryDark"
                android:scaleType="fitCenter"
                android:src="@drawable/deck" />

            <TextView
                android:id="@+id/text_decks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:text="DECKS"
                android:textColor="@color/primary_font_color"
                android:textSize="20dp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_column="0"
            android:layout_row="1">

            <ImageButton
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/button_expansions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:background="?attr/colorPrimaryDark"
                android:scaleType="fitCenter"
                android:src="@drawable/expansions" />

            <TextView
                android:id="@+id/text_expansions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:text="EXPANSIONS"
                android:textColor="@color/primary_font_color"
                android:textSize="20dp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:layout_column="0"
            android:layout_row="2">

            <ImageButton
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/button_reddit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:background="?attr/colorPrimaryDark"
                android:scaleType="fitCenter"
                android:src="@drawable/reddit" />

            <TextView
                android:id="@+id/text_reddit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:text="REDDIT"
                android:textColor="@color/primary_font_color"
                android:textSize="20dp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_column="1"
            android:layout_row="0">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button_cards"
                android:padding="@dimen/activity_horizontal_margin"
                android:background="?attr/colorPrimaryDark"
                android:scaleType="fitCenter"
                android:src="@drawable/all_cards" />

            <TextView
                android:id="@+id/text_cards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:text="CARDS"
                android:textColor="@color/primary_font_color"
                android:textSize="20dp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_column="1"
            android:layout_row="1">

            <ImageButton
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/button_adventures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:background="?attr/colorPrimaryDark"
                android:scaleType="fitCenter"
                android:src="@drawable/adventures" />

            <TextView
                android:id="@+id/text_adventures"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:text="ADVENTURES"
                android:textColor="@color/primary_font_color"
                android:textSize="20dp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_column="1"
            android:layout_row="2">

            <ImageButton
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/button_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin"
                android:background="?attr/colorPrimaryDark"
                android:scaleType="fitCenter"
                android:src="@drawable/position" />

            <TextView
                android:id="@+id/text_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:text="POSITION"
                android:textColor="@color/primary_font_color"
                android:textSize="20dp" />

        </android.support.v7.widget.CardView>

    </GridLayout>

</ScrollView>