<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pearl"
    android:orientation="vertical"
    tools:context=".decks.Decks">

    <ListView
        android:id="@+id/list_view_decks"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
