...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center">

            <TextView
                android:id="@+id/text_view_count_cards"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:textColor="@color/primary_font_color"
                android:textSize="16sp"/>
        </LinearLayout>
...
