<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:background="@color/dark_grey">

        <!--<android.support.design.widget.TextInputLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="1.0">-->
            <!--<EditText android:id="@+id/edit_card_name"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:inputType="text"-->
                <!--android:hint="Write card name here"-->
                <!--android:gravity="center"-->
                <!--android:textColor="?attr/colorAccent"/>-->
        <!--</android.support.design.widget.TextInputLayout>-->


        <EditText
            android:id="@+id/edit_card_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="Write card name here"
            android:gravity="center"
            android:layout_weight="1.0"/>

        <ImageButton
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_search_white_36dp"
            android:background="@color/dark_grey"
            android:layout_gravity="center_vertical"
            android:layout_weight="6.0"/>

    </LinearLayout>

</LinearLayout>
