...
                            android:id="@+id/hero"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:text="Hero"/>
                        <RadioButton
                            android:id="@+id/minion"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:text="Minion"/>
                        <RadioButton
                            android:id="@+id/spell"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1.0"
                            android:text="Spell"/>
...

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end">
        <ImageButton
            android:id="@+id/button_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@mipmap/ic_search_white_36dp"
            android:background="@drawable/frame" />
    </LinearLayout>
...
